rebase and pr comments